Fix: #AR-7515 Auth SDK upgrade v1.0.9

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "latest-sample-auth-simple-html-css-js",
-  "version": "1.0.0",
+  "version": "1.0.9",
   "description": "",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "@arcana/auth": "1.0.8",
+    "@arcana/auth": "1.0.9",
+    "dotenv": "^16.3.1",
     "parcel": "^2.9.3"
   },
   "devDependencies": {
